# CodeSight

./: .editorconfig  .env.docker  .env.example  .env.production.example  .env.test.example  .gitignore  .markdownlint.json  .mcp.json  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.production  Dockerfile.test  LICENSE.md  QUICKSTART-Docker-Testing.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  Security.md  TASKS_SUMMARY.md  benchmark-report-v0.1.0.md  claude_desktop_config.json  codesight-mcp-v0.1.0.sha256.txt  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  eslint.config.js  fixes-completion-report-v0.1.0.md  index.html  jest.config.js  package-lock.json  package.json  release-notes-v0.1.0.md  (+8 more)
rust-core/: Cargo.toml  README.md  clippy.toml  rustfmt.toml
rust-core/benches/: Cargo.toml  bench_indexing.rs  bench_parsing.rs  bench_search.rs  benchmark_runner.rs  embedding_benchmarks.rs  indexing_benchmark.rs  indexing_benchmarks.rs  memory_benchmark.rs  parallel_indexing_benchmarks.rs  search_benchmark.rs  search_benchmarks.rs
rust-core/crates/cache/: Cargo.toml
rust-core/crates/cache/src/: lib.rs
rust-core/crates/core/: Cargo.toml
rust-core/crates/core/benches/: memory_benchmarks.rs
rust-core/crates/core/src/: config.rs  error.rs  errors.rs  lib.rs  traits.rs  types.rs  utils.rs
rust-core/crates/core/src/models/: cache_entry.rs  code_entity.rs  code_relationship.rs  codebase.rs  configuration.rs  embedding.rs  index.rs  index_job.rs  mod.rs  plugin.rs  query.rs
rust-core/crates/core/src/services/: analytics_service.rs  cache_service.rs  codebase_service.rs  configuration_service.rs  embedding_service.rs  indexing_service.rs  job_service.rs  (+3 more)
rust-core/crates/embedding/: Cargo.toml
rust-core/crates/embedding/src/: lib.rs
rust-core/crates/ffi/: Cargo.toml
rust-core/crates/ffi/src/: lib.rs
rust-core/crates/indexer/: Cargo.toml
rust-core/crates/indexer/src/: engine.rs  lib.rs  progress.rs  queue.rs  worker.rs
rust-core/crates/parser/: Cargo.toml
rust-core/crates/parser/src/: extractors.rs  languages.rs  lib.rs  parsers.rs  utils.rs
rust-core/crates/search/: Cargo.toml
rust-core/crates/search/src/: lib.rs
rust-core/crates/storage/: Cargo.toml
rust-core/crates/storage/src/: lib.rs
rust-core/src/: lib.rs
rust-core/src/cache/: redis.rs
rust-core/src/models/: api_endpoint.rs  code_metric.rs  mod.rs
rust-core/src/services/: analyzer.rs  memory_profiler.rs  metrics.rs  mod.rs  parallel_indexer.rs  query_cache.rs  search.rs  security.rs  storage.rs
rust-core/src/storage/: duckdb.rs  postgres.rs  sqlite.rs
typescript-mcp/: .env.example  .eslintrc.js  .prettierignore  .prettierrc.json  CLAUDE_DESKTOP_SETUP.md  Cargo.toml  MCP-TOOLS.md  README.md  README_REAL_IMPLEMENTATION.md  claude-desktop-config.json  eslint.config.js  package-linux.json  package-lock.json  package.json  quick-test.js  start-mcp-server.bat  test-integration-server.js  test-mcp-manual.js  test-mcp-real.bat  tsconfig.json  vitest.config.ts
typescript-mcp/.call_overflow/: overflow_searchcode_1758747811015.json
typescript-mcp/.husky/: pre-commit
typescript-mcp/docs/: API.md  ARCHITECTURE.md
typescript-mcp/scripts/: build-native.js  security-scan.js
typescript-mcp/src/: config.ts  health-check-cli-simple.ts  health-check-cli.ts  health-check.ts  index.ts  lib.rs  minimal-index.ts  rust-bridge.ts  server.ts
typescript-mcp/src/cli/: index.ts
typescript-mcp/src/controllers/: analysis-controller.ts  codebase-controller.ts  configuration.ts  health-controller.ts  jobs.ts  queries.ts  refactoring-controller.ts  search-controller.ts
typescript-mcp/src/ffi/: rust-bridge.ts
typescript-mcp/src/llm/: groq.ts  huggingface.ts  llama.ts  lmstudio.ts  ollama.ts  router.ts
typescript-mcp/src/middleware/: auth-middleware.ts  auth.ts  error-handler-middleware.ts  index.ts  logging.ts  rate-limit-middleware.ts  rate-limit.ts  security.ts  types.ts
typescript-mcp/src/monitoring/: otel-tracing.ts  prometheus-exporter.ts
typescript-mcp/src/queue/: index.ts
typescript-mcp/src/services/: ai-llm.ts  analysis-service.ts  api-discovery-service.ts  ast-parser-service.ts  code-analysis.ts  codebase-service.ts  complexity-service.ts  database-adapter.ts  database-search-service.ts  duplication-service.ts  indexing-service.ts  llm-service.ts  logger.ts  monitoring-service.ts  rag-service.ts  refactoring-service.ts  search-service.ts  security-analyzer.ts  security-service.ts
typescript-mcp/src/tools/: ai-code-review.ts  analyze-security.ts  bug-prediction.ts  check-complexity.ts  context-aware-codegen.ts  explain-function.ts  find-duplicates.ts  find-references.ts  get-api-endpoints.ts  index.ts  intelligent-refactoring.ts  search-code.ts  suggest-refactoring.ts  technical-debt-analysis.ts  trace-data-flow.ts
typescript-mcp/src/types/: index.ts
typescript-mcp/src/utils/: ai-helpers.ts
typescript-mcp/tests/: basic.test.ts  helper.js
typescript-mcp/tests/contract/: test_analyze_security.ts  test_check_complexity.ts  test_codebases_get.ts  test_codebases_id_delete.ts  test_codebases_id_get.ts  test_codebases_index.ts  test_codebases_post.ts  test_codebases_stats.ts  test_explain_function.ts  test_find_duplicates.ts  test_find_references.ts  test_get_api_endpoints.ts  test_health.ts  test_jobs_get.ts  test_jobs_id_get.ts  test_metrics.ts  test_queries_post.ts  test_search_code.ts  test_suggest_refactoring.ts  test_trace_data_flow.ts
typescript-mcp/tests/integration/: edge-cases.test.ts  server-integration.test.ts  test_cicd_integration.ts  test_claude_desktop.ts  test_local_llm.ts  test_monorepo_scale.ts  test_vscode_integration.ts
typescript-mcp/tests/performance/: health-check-performance.test.ts  test_concurrent_load.ts  test_database_optimization.ts  test_mcp_tools_performance.ts  test_memory_optimization.ts  test_monitoring_dashboard.ts
typescript-mcp/tests/unit/: ai-tools.test.ts  health-check.test.ts
typescript-mcp/tests/utils/: test-utils.ts
(+165 files in other folders)
