[workspace]
members = [
    "crates/core",
    "crates/parser",
    "crates/indexer",
    "crates/search",
    "crates/embedding",
    "crates/storage",
    "crates/cache",
    "crates/ffi"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["CodeSight Team"]
license = "MIT"
repository = "https://github.com/your-org/codesight-mcp"
homepage = "https://codesight-mcp.com"
description = "High-performance CodeSight MCP Server core engine"
keywords = ["codesight", "mcp", "search", "parsing", "ai"]
categories = ["development-tools", "parsing", "text-processing"]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# Tree-sitter for parsing
tree-sitter = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c-sharp = "0.20"

# Simplified dependencies for testing
# tantivy = "0.21"
# ort = "1.16"
# ndarray = "0.15"
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "uuid", "chrono", "json"] }
# duckdb = { version = "0.9", features = ["bundled"] }
# redis = { version = "0.24", features = ["tokio-comp"] }

# FFI
napi = { version = "2.14", features = ["full"] }
napi-derive = "2.14"

# Utilities
walkdir = "2.4"
notify = "6.1"
sha2 = "0.10"
base64 = "0.21"
lru = "0.12"
dashmap = "5.5"
once_cell = "1.19"
proptest = "1.4"
tempfile = "3.8"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
num_cpus = "1.16"
async-trait = "0.1"

# Development dependencies
[workspace.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
proptest = "1.4"
tokio-test = "0.4"

# Benchmark configurations moved to individual crates

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true