[package]
name = "codesight-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
codesight-core = { path = ".." }
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["full"] }
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
serde_json = "1.0"
tempfile = "3.8"

[[bench]]
name = "indexing_benchmark"
harness = false

[[bench]]
name = "search_benchmark"
harness = false

[[bench]]
name = "memory_benchmark"
harness = false