[package]
name = "code-intelligence-embedding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Embedding generation for Code Intelligence MCP Server"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true

# ONNX Runtime (disabled for testing)
# ort.workspace = true
# ndarray.workspace = true

# Async runtime
tokio.workspace = true

# Utilities
lru.workspace = true
dashmap.workspace = true

# Local dependencies
code-intelligence-core = { path = "../core" }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
tokio-test.workspace = true