[package]
name = "code-intelligence-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tree-sitter based code parser for Code Intelligence MCP Server"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true

# Tree-sitter dependencies
tree-sitter.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c-sharp.workspace = true

# Async runtime
tokio.workspace = true

# Utilities
walkdir.workspace = true
notify.workspace = true
sha2.workspace = true
regex = "1.10"

# Local dependencies
code-intelligence-core = { path = "../core" }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
tokio-test.workspace = true