[package]
name = "code-intelligence-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Search engine for Code Intelligence MCP Server"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true

# Search engine (disabled for testing)
# tantivy.workspace = true

# Async runtime
tokio.workspace = true

# Utilities
lru.workspace = true
dashmap.workspace = true

# Local dependencies
code-intelligence-core = { path = "../core" }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
tokio-test.workspace = true